EnvironmentSimulator/Libraries/esminiLib/esminiLib.hpp

typedef struct
{
    int    id;              // Automatically generated unique object id
    int    model_id;        // Id to control what 3D model to represent the vehicle - see carModelsFiles_[] in scenarioenginedll.cpp
    int    ctrl_type;       // 0: DefaultController 1: External. Further values see Controller::Type enum
    double timestamp;       // Not used yet (idea is to use it to interpolate position for increased sync bewtween simulators)
    double x;               // global x coordinate of position
    double y;               // global y coordinate of position
    double z;               // global z coordinate of position
    double h;               // heading/yaw in global coordinate system
    double p;               // pitch in global coordinate system
    double r;               // roll in global coordinate system
    id_t   roadId;          // road ID
    id_t   junctionId;      // Junction ID (-1 if not in a junction)
    double t;               // lateral position in road coordinate system
    int    laneId;          // lane ID
    double laneOffset;      // lateral offset from lane center
    double s;               // longitudinal position in road coordinate system
    double speed;           // speed
    double centerOffsetX;   // x coordinate of bounding box center relative object reference point (local coordinate system)
    double centerOffsetY;   // y coordinate of bounding box center relative object reference point (local coordinate system)
    double centerOffsetZ;   // z coordinate of bounding box center relative object reference point (local coordinate system)
    double width;           // width
    double length;          // length
    double height;          // height
    int    objectType;      // Main type according to entities.hpp / Object / Type
    int    objectCategory;  // Sub category within type, according to entities.hpp / Vehicle, Pedestrian, MiscObject / Category
    double wheel_angle;     // Steering angle of the wheel
    double wheel_rot;       // Rotation angle of the wheel
    int    visibilityMask;  // bitmask according to Object::Visibility (1 = Graphics, 2 = Traffic, 4 = Sensors)
} SE_ScenarioObjectState;
// asciidoc end::SE_RoadInfo_struct[]

typedef struct
{
    double x;           // Route point in the global coordinate system
    double y;           // Route point in the global coordinate system
    double z;           // Route point in the global coordinate system
    double h;           // Route point, heading in the global coordinate system
    id_t   roadId;      // Route point, road ID
    id_t   junctionId;  // Route point, junction ID (-1 if not in a junction)
    int    laneId;      // Route point, lane ID
    int    osiLaneId;   // Route point, osi lane ID
    double laneOffset;  // Route point, lane offset (lateral distance from lane center)
    double s;           // Route point, s (longitudinal distance along reference line)
    double t;           // Route point, t (lateral distance from reference line)
} SE_RouteInfo;
typedef struct
{
    int            width;
    int            height;
    int            pixelSize;    // 3 for RGB/BGR
    int            pixelFormat;  // 0x1907=RGB (GL_RGB), 0x80E0=BGR (GL_BGR)
    unsigned char *data;
} SE_Image;  // Should be synked with CommonMini/OffScreenImage
typedef struct
{
    int    id;  // id of object to perform action
    double speed;
    int    transition_shape;  // 0 = cubic, 1 = linear, 2 = sinusoidal, 3 = step
    int    transition_dim;    // 0 = distance, 1 = rate, 2 = time
    double transition_value;
} SE_SpeedActionStruct;
typedef struct
{
    int    id;                // id of object to perform action
    int    mode;              // 0 = absolute, 1 = relative (own vehicle)
    int    target;            // target lane id (absolute or relative)
    int    transition_shape;  // 0 = cubic, 1 = linear, 2 = sinusoidal, 3 = step
    int    transition_dim;    // 0 = distance, 1 = rate, 2 = time
    double transition_value;
} SE_LaneChangeActionStruct;
typedef struct
{
    int    id;  // id of object to perform action
    double offset;
    double maxLateralAcc;     // 0 = distance, 1 = rate, 2 = time
    int    transition_shape;  // 0 = cubic, 1 = linear, 2 = sinusoidal, 3 = step
} SE_LaneOffsetActionStruct;
    /**
            Register a function and optional argument (ref) to be called back from esmini after ParameterDeclarations has been parsed,
            but before the scenario is initialized, i.e. before applying the actions in the Init block. One use-case is to
            set parameter values for initial entity states, e.g. s value in lane position. So this callback will happen just
            after parameters has been parsed, but before they are applied, providing an opportunity to control the initial
            states via API.
            Registered init callbacks are not automatically cleared between SE_Init calls.
            @param fnPtr A pointer to the function to be invoked. Set 0/NULL to clear any registered callback.
            @param user_data Optional pointer to a local data object that will be passed as argument in the callback. Set 0/NULL if not needed.
    */
    SE_DLL_API void SE_RegisterParameterDeclarationCallback(void (*fnPtr)(void *), void *user_data);
    /**
            Register a function and optional parameter (ref) to be called back from esmini after each frame (update of scenario)
            The current state of specified entity will be returned.
            Complete or part of the state can then be overridden by calling the SE_ReportObjectPos/SE_ReportObjectRoadPos functions.
            Registered callbacks will be cleared between SE_Init calls.
            @param object_id Handle to the position object (entity)
            @param fnPtr A pointer to the function to be invoked
            @param user_data Optional pointer to a local data object that will be passed as argument in the callback. Set 0/NULL if not needed.
    */
    SE_DLL_API void SE_RegisterObjectCallback(int object_id, void (*fnPtr)(SE_ScenarioObjectState *, void *), void *user_data);
    /**
    Registers a function to be called back from esmini every time a condition is triggered.
    The name of the respective condition and the current timestamp will be returned.
    Registered callbacks will be cleared between SE_Init calls.
    @param fnPtr A pointer to the function to be invoked
    */
    SE_DLL_API void SE_RegisterConditionCallback(void (*fnPtr)(const char *name, double timestamp));
    /**
    Registers a function to be called back from esmini every time a StoryBoardElement changes its state.
    The name of the respective StoryBoardElement, the type, state, and full path (parent names delimited by /) will be returned.
    See StoryBoardElement.hpp -> StoryBoardElement class ElementType and State enums for type and state values.
    Registered callbacks will be cleared between SE_Init calls.
    @param fnPtr A pointer to the function to be invoked
    */
    SE_DLL_API void SE_RegisterStoryBoardElementStateChangeCallback(void (*fnPtr)(const char *name, int type, int state, const char *full_path));
    /**
    Register a function and optional parameter (ref) to be called back from esmini after each frame (update of scenario)
    The current state of specified entity will be returned.
    Complete or part of the state can then be overridden by calling the SE_ReportObjectPos/SE_ReportObjectRoadPos functions.
    Registered callbacks will be cleared between SE_Init calls.
    @param fnPtr A pointer to the function to be invoked
    @param user_data Optional pointer to a local data object that will be passed as argument in the callback. Set 0/NULL if not needed.
    */
    SE_DLL_API void SE_RegisterImageCallback(void (*fnPtr)(SE_Image *, void *), void *user_data);
    /**
    Add a fixed camera at custom global position and orientation (heading and pitch)
    @param x X coordinate
    @param y Y coordinate
    @param z Z coordinate
    @param h Heading (yaw) (radians)
    @param p P Pitch (radians)
    @return index of the camera, can be used for SE_SetCameraMode(), -1 on error
    */
    SE_DLL_API int SE_AddCustomFixedCamera(double x, double y, double z, double h, double p);
    /**
    Add a camera with relative position looking at current entity
    @param x X coordinate
    @param y Y coordinate
    @param z Z coordinate
    @return index of the camera, can be used for SE_SetCameraMode(), -1 on error
    */
    SE_DLL_API int SE_AddCustomAimingCamera(double x, double y, double z);
    /**
    Add a camera at fixed location but always looking at current entity
    @param x X coordinate
    @param y Y coordinate
    @param z Z coordinate
    @param fixed_pos Position is relative current vehicle (false) or fixed (true)
    @return index of the camera, can be used for SE_SetCameraMode(), -1 on error
    */
    SE_DLL_API int SE_AddCustomFixedAimingCamera(double x, double y, double z);
    /**
    Add a top view camera with fixed position and rotation
    @param x X coordinate
    @param y Y coordinate
    @param z Z coordinate
    @param rot Rotation (radians)
    @return index of the camera, can be used for SE_SetCameraMode(), -1 on error
    */
    SE_DLL_API int SE_AddCustomFixedTopCamera(double x, double y, double z, double rot);
    /**
    Select camera mode
    @param mode Camera mode as in RubberbandManipulator::CAMERA_MODE
    @return 0 if successful, -1 if not
    */
    SE_DLL_API int SE_SetCameraMode(int mode);
    /**
    Sets the camera focus to the specified object
    @param object_id The object to focus on
    @return 0 if successful, -1 if not
    */
    SE_DLL_API int SE_SetCameraObjectFocus(int object_id);
    /**
    Get the Id of the object the camera is focused on
    @return Id of the object, -1 on error e.g. scenario not initialized or viewer not enabled
    */
    SE_DLL_API int SE_GetObjectInCameraFocus();
    /**
    Get the position (x, y, z) and orientation (heading/yaw, pitch, roll) of the viewer camera
    @param x reference to a variable returning the camera x coordinate
    @param y reference to a variable returning the camera y coordinate
    @param z reference to a variable returning the camera z coordinate
    @param h reference to a variable returning the camera heading/yaw
    @param p reference to a variable returning the camera pitch
    @param r reference to a variable returning the camera roll
    @return 0 if successful, -1 if not
    */
    SE_DLL_API int SE_GetCameraPos(double *x, double *y, double *z, double *h, double *p, double *r);
    /**
            Get the number Route points assigned for a specific vehicle
            @param object_id The index of the vehicle
            @return number of Route points (0 means no route assigned), -1 on error
    */
    SE_DLL_API int SE_GetNumberOfRoutePoints(int object_id);
    /**
            Get a specific route point for a certain vehicle
            @param object_id The index of the vehicle
            @param route_index The index of Route point
            @return 0 if successful, -1 if not (e.g. wrong type)
    */
    SE_DLL_API int SE_GetRoutePoint(int object_id, unsigned int route_index, SE_RouteInfo *routeinfo);
    /**
        Get the total length of the route assigned to specified object
        @param object_id Id of the object
        @return Length (m) of route, 0.0 if no route is assigned
    */
    SE_DLL_API double SE_GetRouteTotalLength(int object_id);
    /**
            Inject a speed action
            @param action Struct including needed info for the action, see SE_SpeedActionStruct definition
    */
    SE_DLL_API void SE_InjectSpeedAction(SE_SpeedActionStruct *action);
    /**
            Inject a lane change action
            @param action Struct including needed info for the action, see SE_LaneChangeActionStruct definition
    */
    SE_DLL_API void SE_InjectLaneChangeAction(SE_LaneChangeActionStruct *action);
    /**
            Inject a lane offset action
            @param action Struct including needed info for the action, see SE_LaneOffsetActionStruct definition
    */
    SE_DLL_API void SE_InjectLaneOffsetAction(SE_LaneOffsetActionStruct *action);
    /**
            Check whether any injected action is ongoing
            @param action_type Type of action, see esmini Action.hpp::ActionType enum. Set to -1 to check for any action.
    */
    SE_DLL_API bool SE_InjectedActionOngoing(int action_type);