EnvironmentSimulator/Libraries/esminiLib/ESMiniWrapper.cs


        /// <summary>
        /// Adds a custom fixed camera.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_AddCustomFixedCamera(double x, double y, double z, double h, double p);

        /// <summary>
        /// Adds a custom camera aiming at a target.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_AddCustomAimingCamera(double x, double y, double z);

        /// <summary>
        /// Adds a custom fixed camera aiming at a target.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_AddCustomFixedAimingCamera(double x, double y, double z);

        /// <summary>
        /// Adds a custom fixed top-down camera.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_AddCustomFixedTopCamera(double x, double y, double z, double rot);

        /// <summary>
        /// Sets the camera mode.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetCameraMode(int mode);

        /// <summary>
        /// Sets the camera to focus on a specific object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetCameraObjectFocus(int object_id);

        /// <summary>
        /// Gets the ID of the object currently in camera focus.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetObjectInCameraFocus();

        /// <summary>
        /// Gets the current camera position and orientation.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetCameraPos(out double x, out double y, out double z, out double h, out double p, out double r);

        /// <summary>
        /// Gets the number of route points for an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetNumberOfRoutePoints(int object_id);

        /// <summary>
        /// Gets information about a specific route point.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetRoutePoint(int object_id, uint route_index, ref RouteInfo routeinfo);

        /// <summary>
        /// Gets the total length of an object's route.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern double SE_GetRouteTotalLength(int object_id);

        /// <summary>
        /// Injects a speed action.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_InjectSpeedAction(IntPtr action);

        /// <summary>
        /// Injects a lane change action.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_InjectLaneChangeAction(IntPtr action);

        /// <summary>
        /// Injects a lane offset action.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_InjectLaneOffsetAction(IntPtr action);

        /// <summary>
        /// Checks if an injected action of a specific type is currently ongoing.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool SE_InjectedActionOngoing(int action_type);
    }
}
